# yEscher

./: .gitignore  .gitmodules  pyproject.toml  setup.py
src/yescher_saibe3233/: analysis.py
src/yescher_saibe3233/outputs/: YLR044C_knockout.csv  YLR044C_knockout_map.html  cEFL_knockout.csv
